--- a/Login.html
+++ b/Login.html
@@ -29,7 +29,10 @@
             </div>
             <br>
             <div class="salvar" id="salvar">
-                
+                <input type="checkbox" >
+                <label class="check-label" type="check-terms">
+                    Deseja Salvar Sua Conta
+                </label>
             </div>
         </form>
     </fieldset>
