--- a/Login.html
+++ b/Login.html
@@ -13,7 +13,7 @@
         <form action="#" accept-charset="UTF-8" accept-patch="#"> <!--Está tag será responsavel por indicar o tipo de midia o servidor está apto a entender-->
             <div class="E-mail" id="E-mail"><!--Ao inserir as tags input, dentro da tag possui um check de  validação, verificando se os caracteres estão corretos-->
                 <span class="material-symbols-outlined">mail</span>
-                <input type="email" name="email" [(ngModel)]="email" placeholder="NomeEmail@hotmail.com" pattern="[A-Za-z]{3}+@[@\s]" required maxlength="45" checked="email" aria-activedescendant="email">
+                <input type="email" name="email" [(ngModel)]="email" placeholder="Email@hotmail.com" pattern="[A-Za-z]{3}+@[@\s]" required maxlength="18" checked="email" aria-activedescendant="email">
             </div>
             <br>
             <div class="senha" id="senha">
@@ -38,13 +38,14 @@
             <div class="polica-group" id="polica-group">
                 <input type="checkbox" required name="Termos de Consentimento" class="check" id="check-terms" value="">
                 <label class="check-label" type="check-terms" >
-                    Tenho ciência e concordo que meus dados aqui informados poderão ser utilizados pela Empresa de acordo com os termos apresentados no <a target="_blank" href="politica-de-privacidade">Política de Privacidade.</a> 
+                    Tenho ciência e concordo que meus dados seja utilizados pela empresa de acordo com os termos apresentados <a target="_blank" href="politica-de-privacidade">Política de Privacidade.</a> 
                 </label>
                 </div>
             </div>
             <br>
             <div class="salvar" id="salvar">
-                <input type="checkbox" >
+                <input type="checkbox" [routerLink]="['routePath', routeParameterValue]"
+                routerLinkActive="router-link-active">
                 <label class="check-label" type="check-terms">
                     Deseja Salvar Sua Conta
                 </label>
