--- a/Login.html
+++ b/Login.html
@@ -19,7 +19,7 @@
             <br>
             <div class="senha" id="senha">
                 <span class="material-symbols-outlined">password</span>
-                <input type="senha" class="senha" pattern="[A-Za-z]{9}"  [(ngModel)]="senha" placeholder="Digite Sua Senha" required maxlength="19" aria-activedescendant="senha" checked="senha">
+                <input type="password" class="senha-password" pattern="[A-Za-z]{9}"  [(ngModel)]="senha" placeholder="Digite Sua Senha" required maxlength="19" aria-activedescendant="senha" checked="senha">
             </div>
             <br>
             <section class="cadastro" id="cadastro">
