--- a/Login.html
+++ b/Login.html
@@ -24,14 +24,14 @@
             <br>
             <section class="cadastro" id="cadastro">
                 <div class="cadastro" id="cadastro">
-                    <a href="#" target="_blank" style="text-decoration: none;">CADASTRAR-SE</a>
+                    <a href="#" target="_self" style="text-decoration: none;">CADASTRAR-SE</a>
                 </div>
             </section>
             <br>
             <section class="redefinir-senha" id="senha">
                 <div class="redefinir-senha" id="senha">
                     <i>
-                        <a href="#" target="_blank" style="text-decoration: none;">RECUPERAR SUA SENHA!</a>
+                        <a href="#" target="_self" style="text-decoration: none;">ESQUECI A SENHA!</a>
                     </i>
                 </div>
             </section>
@@ -39,7 +39,7 @@
             <div class="polica-group" id="polica-group">
                 <input type="checkbox" required name="Termos de Consentimento" class="check" id="check-terms" value="">
                 <label class="check-label" type="check-terms" style="color: white;">
-                    Tenho ciência e concordo que meus dados seja utilizados pela empresa de acordo com os termos apresentados <a target="_blank" href="politica-de-privacidade">Política de Privacidade.</a> 
+                    Tenho ciência e concordo com as politicas da empresa <a target="_blank" href="politica-de-privacidade" style="text-decoration: none;">Política de Privacidade.</a> 
                 </label>
                 </div>
             </div>
