--- a/Login.html
+++ b/Login.html
@@ -30,16 +30,14 @@
             <br>
             <section class="redefinir-senha" id="senha">
                 <div class="redefinir-senha" id="senha">
-                    <i>
-                        <a href="#" target="_self" style="text-decoration: none;">ESQUECI A SENHA!</a>
-                    </i>
+                    <a href="#" target="_self" style="text-decoration: none;">ESQUECI A SENHA!</a>
                 </div>
             </section>
             <br>
-            <div class="polica-group" id="polica-group">
+            <div class="politica-group" id="polica-group">
                 <input type="checkbox" required name="Termos de Consentimento" class="check" id="check-terms" value="">
-                <label class="check-label" type="check-terms" style="color: white;">
-                    Tenho ciência e concordo com as politicas da empresa <a target="_blank" href="politica-de-privacidade" style="text-decoration: none;">Política de Privacidade.</a> 
+                <label class="checkbox-label" type="check-terms" style="color: white;">
+                    Concordo com as politicas da empresa<a target="_blank" href="politica-de-privacidade" style="text-decoration: none;">Política de Privacidade.</a> 
                 </label>
                 </div>
             </div>
