--- a/Login.html
+++ b/Login.html
@@ -36,18 +36,18 @@
             <br>
             <div class="politica-group" id="polica-group">
                 <input type="checkbox" required name="Termos de Consentimento" class="check" id="check-terms" value="">
-                <label class="checkbox-label" type="check-terms" style="color: white;">
+                <p class="checkbox-label" type="check-terms" style="color: white;">
                     Concordo com as politicas da empresa<a target="_blank" href="politica-de-privacidade" style="text-decoration: none;">Política de Privacidade.</a> 
-                </label>
+                </p>
                 </div>
             </div>
             <br>
             <div class="salvar" id="salvar">
                 <input type="checkbox" [routerLink]="['routePath', routeParameterValue]"
                 routerLinkActive="router-link-active">
-                <label class="check-label" type="check-terms" style="color: white;">
+                <p class="check-label" type="check-terms" style="color: white;">
                     Deseja Salvar Sua Conta
-                </label>
+                </p>
             </div>
             <br>
             <div class="btn-enviar" id="btn-enviar">
