--- a/Login.html
+++ b/Login.html
@@ -37,9 +37,11 @@
             <div class="check" id="check">
                 <input type="checkbox" [routerLink]="['routePath', routeParameterValue]"
                 routerLinkActive="router-link-active">
-                <a class="check-terms" type="check-terms" style="color: white;">
-                    Deseja Salvar Sua Conta
-                </a>
+                <label class="check-terms" type="check-terms" style="color: white;">
+                    <a>
+                        Deseja Salvar Sua Conta
+                    </a>
+                </label>
             </div>
             <br>
             <div class="btn-enviar" id="btn-enviar">
