--- a/Cadastro.html
+++ b/Cadastro.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <fieldset class="border" id="border">
-        <h1 class="fa-toilet-paper">CADASTRA-SE</h1>
-        <form action="#" accept-charset="UTF-8">
-            <div class="nome-full" id="nome">
-
+    <fieldset class="borda" id="borda">
+        <h1 class="fa-toilet-paper">LOGIN</h1>
+        <form action="#" accept="viewport" novalidate>
+            <div class="nome" id="nome">
+                <span class="material-symbols-outlined">badge</span>
+                <input type="name" formArrayName="novalidate" name="nome" class="nome-full" [formGroupName]="nome-full" placeholder="Digite Seu nome Completo" pattern="[A-Za-z]">
+                <mat-form-field>
+                    
+                </mat-form-field>
             </div>
         </form>
     </fieldset>
