--- a/Cadastro.html
+++ b/Cadastro.html
@@ -6,6 +6,8 @@
     <title>Cadastro</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Nome Simbolo-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Email-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Senha-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Mundo-->
 </head>
 <body>
     <fieldset class="borda" id="borda">
@@ -57,17 +59,22 @@
             </div>
             <br> 
             <div class="senha" id="senha">
-                 
                 <label class="control_label" for="psw_senha">
+                    <span class="material-symbols-outlined">lock</span>
                 </label>
                 <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[senha]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password">   
             </div>
-            <div class="psw_senha" id="psw_senha">
+            <div class="psw_senha" id="psw_senha_confirmation">
                 <label class="control-label" for="psw_confirmation">
+                    <span class="material-symbols-outlined">lock</span>
                 </label>
+                <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[psw_senha_confirmation]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password">
             </div>
         </form>
-        <br> 
+        <br>
+        <div class="Mundo" id="Mundo">
+            <span class="material-symbols-outlined">language</span>
+        </div>
     </fieldset>
 </body>
 </html>
