--- a/Cadastro.html
+++ b/Cadastro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Email-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Senha-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Mundo-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Aniversario-->
 </head>
 <body>
     <fieldset class="borda" id="borda">
@@ -64,6 +65,7 @@
                 </label>
                 <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[senha]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password">   
             </div>
+            <br>
             <div class="psw_senha" id="psw_senha_confirmation">
                 <label class="control-label" for="psw_confirmation">
                     <span class="material-symbols-outlined">lock</span>
@@ -76,12 +78,211 @@
             <div class="linguagem" id="linguagem">
                 <span class="material-symbols-outlined">language</span>
                 <select class="pais" required="required" priority="BR" name="pais" id="--Mundo--">
-                    <option value="" selected="">PAIS</option>
+                    <option selected="pais" required="required">PAÍS</option>
+                    <hr class="line">
+                    <optgroup label="África"></optgroup>
+                    <option value="África do Sul">África do Sul</option>
+                    <option value="Angola">Angola</option>
+                    <option value="Argélia">Argélia</option>
+                    <option value="Benin">Benin</option>
+                    <option value="Botsuana">Botsuana</option>
+                    <option value="Burkina Fasso">Burkina Fasso</option>
+                    <option value="Burundi">Burundi</option>
+                    <option value="Cabo Verde">Cabo Verde</option>
+                    <option value="Camarões">Camarões</option>
+                    <option value="Chade">Chade</option>
+                    <option value="Comores">Comores</option>
+                    <option value="Congo">Congo</option>
+                    <option value="Costa do Marfim">Costa do Marfim</option>
+                    <option value="Djibuti">Djibuti</option>
+                    <option value="Egito">Egito</option>
+                    <option value="Eritreia">Eritreia</option>
+                    <option value="Etiópia">Etiópia</option>
+                    <option value="Gabão">Gabão</option>
+                    <option value="Gâmbia">Gâmbia</option>
+                    <option value="Gana">Gana</option>
+                    <option value="Guiné">Guiné</option>
+                    <option value="Guiné-Bissau">Guiné-Bissau</option>
+                    <option value="Guiné-Equatorial">Guiné-Equatorial</option>
+                    <option value="Lesoto">Lesoto</option>
+                    <option value="Libéria">Libéria</option>
+                    <option value="Líbia">Líbia</option>
+                    <option value="Madagáscar">Madagáscar</option>
+                    <option value="Malauí">Malauí</option>
+                    <option value="Mali">Mali</option>
+                    <option value="Marrocos">Marrocos</option>
+                    <option value="Maurício">Maurício</option>
+                    <option value="Mauritânia">Mauritânia</option>
+                    <option value="Moçambique">Moçambique</option>
+                    <option value="Namíbia">Namíbia</option>
+                    <option value="Níger">Níger</option>
+                    <option value="Nigéria">Nigéria</option>
+                    <option value="Quênia">Quênia</option>
+                    <option value="República Centro-Africana">República Centro-Africana</option>
+                    <option value="República Democrática do Congo">República Democrática do Congo</option>
+                    <option value="Ruanda">Ruanda</option>
+                    <option value="São Tomé e Príncipe">São Tomé e Príncipe</option>
+                    <option value="Senegal">Senegal</option>
+                    <option value="Serra Leoa">Serra Leoa</option>
+                    <option value="Seicheles">Seicheles</option>
+                    <option value="Tunísia">Tunísia</option>
+                    <option value="Somália">Somália</option>
+                    <option value="Suazilândia">Suazilândia</option>
+                    <option value="Sudão">Sudão</option>
+                    <option value="Sudão do Sul">Sudão do Sul</option>
+                    <option value="Uganda">Uganda</option>
+                    <option value="Tanzânia">Tanzânia</option>
+                    <option value="Togo">Togo</option>
+                    <option value="Zâmbia">Zâmbia</option>
+                    <option value="Zimbábue">Zimbábue</option>
+                    <hr class="line">
+                    <optgroup label="América"></optgroup>
+                    <option value="Antígua e Barbuda">Antígua e Barbuda</option>
+                    <option value="Argentina">Argentina</option>
+                    <option value="Bahamas">Bahamas</option>
+                    <option value="Barbados">Barbados</option>
+                    <option value="Belize">Belize</option>
+                    <option value="Bolívia">Bolívia</option>
+                    <option value="Brasil">Brasil</option>
+                    <option value="Colômbia">Colômbia</option>
+                    <option value="Costa Rica">Costa Rica</option>
+                    <option value="Cuba">Cuba</option>
+                    <option value="Dominica">Dominica</option>
+                    <option value="El Salvador">El Salvador</option>
+                    <option value="Equador">Equador</option>
+                    <option value="Estados Unidos">Estados Unidos</option>
+                    <option value="Guiana">Guiana</option>
+                    <option value="Haiti">Haiti</option>
+                    <option value="Honduras">Honduras</option>
+                    <option value="Jamaica">Jamaica</option>
+                    <option value="México">México</option>
+                    <option value="Nicarágua">Nicarágua</option>
+                    <option value="Panamá">Panamá</option>
+                    <option value="República Dominicana">República Dominicana</option>
+                    <option value="Santa Lúcia">Santa Lúcia</option>
+                    <option value="São Cristóvão e Névis">São Cristóvão e Névis</option>
+                    <option value="São Vicente e Granadinas">São Vicente e Granadinas</option>
+                    <option value="Suriname">Suriname</option>
+                    <option value="Trinidad e Tobago">Trinidad e Tobago</option>
+                    <option value="Uruguai">Uruguai</option>
+                    <option value="Venezuela">Venezuela</option>
+                    <hr class="line">
+                    <optgroup label="Ásia">Ásia</optgroup>
+                    <option value="Afeganistão">Afeganistão</option>
+                    <option value="Arábia Saudita">Arábia Saudita</option>
+                    <option value="Bangladesh">Bangladesh</option>
+                    <option value="Barein">Barein</option>
+                    <option value="Brunei">Brunei</option>
+                    <option value="Butão">Butão</option>
+                    <option value="Camboja">Camboja</option>
+                    <option value="Catar">Catar</option>
+                    <option value="Cazaquistão">Cazaquistão</option>
+                    <option value="China">China</option>
+                    <option value="Cingapura">Cingapura</option>
+                    <option value="Coreia do Norte">Coreia do Norte</option>
+                    <option value="Coreia do Sul">Coreia do Sul</option>
+                    <option value="Emirados Árabes Unidos">Emirados Árabes Unidos</option>
+                    <option value="Filipinas">Filipinas</option>
+                    <option value="Iêmen">Iêmen</option>
+                    <option value="Índia">Índia</option>
+                    <option value="Indonésia">Indonésia</option>
+                    <option value="Irã">Irã</option>
+                    <option value="Iraque">Iraque</option>
+                    <option value="Israel">Israel</option>
+                    <option value="Japão">Japão</option>
+                    <option value="Jordânia">Jordânia</option>
+                    <option value="Kuwait">Kuwait</option>
+                    <option value="Laos">Laos</option>
+                    <option value="Líbano">Líbano</option>
+                    <option value="Malásia">Malásia</option>
+                    <option value="Maldivas">Maldivas</option>
+                    <option value="Myanmar">Myanmar</option>
+                    <option value="Mongólia">Mongólia</option>
+                    <option value="Nepal">Nepal</option>
+                    <option value="Omã">Omã</option>
+                    <option value="Paquistão">Paquistão</option>
+                    <option value="Síria">Síria</option>
+                    <option value="Sri Lanka">Sri Lanka</option>
+                    <option value="Tadjiquistão">Tadjiquistão</option>
+                    <option value="Tailândia">Tailândia</option>
+                    <option value="Timor-Leste">Timor-Leste</option>
+                    <option value="Turquia">Turquia</option>
+                    <option value="Turcomenistão">Turcomenistão</option>
+                    <option value="Uzbequistão">Uzbequistão</option>
+                    <option value="Vietnã">Vietnã</option>
+                    <option value="Quirguistão">Quirguistão</option>
+                    <hr class="line">
+                    <optgroup label="Europa">Europa</optgroup>
+                    <option value="Albânia">Albânia</option>
+                    <option value="Alemanha">Alemanha</option>
+                    <option value="Andorra">Andorra</option>
+                    <option value="Armênia">Armênia</option>
+                    <option value="Áustria">Áustria</option>
+                    <option value="Azerbaijão">Azerbaijão</option>
+                    <option value="Belarus">Belarus</option>
+                    <option value="Bélgica">Bélgica</option>
+                    <option value="Bósnia-Herzegóvina">Bósnia-Herzegóvina</option>
+                    <option value="Bulgária">Bulgária</option>
+                    <option value="Chipre">Chipre</option>
+                    <option value="Dinamarca">Dinamarca</option>
+                    <option value="Eslováquia">Eslováquia</option>
+                    <option value="Eslovênia">Eslovênia</option>
+                    <option value="Espanha">Espanha</option>
+                    <option value="Estônia">Estônia</option>
+                    <option value="Finlândia">Finlândia</option>
+                    <option value="França">França</option>
+                    <option value="Geórgia">Geórgia</option>
+                    <option value="Grécia">Grécia</option>
+                    <option value="Hungria">Hungria</option>
+                    <option value="Irlanda">Irlanda</option>
+                    <option value="Itália">Itália</option>
+                    <option value="Letônia">Letônia</option>
+                    <option value="Liechtenstein">Liechtenstein</option>
+                    <option value="Lituânia">Lituânia</option>
+                    <option value="Luxemburgo">Luxemburgo</option>
+                    <option value="Macedônia">Macedônia</option>
+                    <option value="Malta">Malta</option>
+                    <option value="Moldávia">Moldávia</option>
+                    <option value="Mônaco">Mônaco</option>
+                    <option value="Montenegro">Montenegro</option>
+                    <option value="Noruega">Noruega</option>
+                    <option value="Polônia">Polônia</option>
+                    <option value="Portugal">Portugal</option>
+                    <option value="Reino Unido">Reino Unido</option>
+                    <option value="República Tcheca">República Tcheca</option>
+                    <option value="Romênia">Romênia</option>
+                    <option value="Rússia">Rússia</option>
+                    <option value="San Marino">San Marino</option>
+                    <option value="Sérvia">Sérvia</option>
+                    <option value="Suécia">Suécia</option>
+                    <option value="Suíça">Suíça</option>
+                    <option value="Ucrânia">Ucrânia</option>
+                    <hr class="line">
+                    <optgroup label="Oceania">Oceania</optgroup>
+                    <option value="Austrália">Austrália</option>
+                    <option value="Fiji">Fiji</option>
+                    <option value="Ilhas Marshall">Ilhas Marshall</option>
+                    <option value="Ilhas Salomão">Ilhas Salomão</option>
+                    <option value="Kiribati">Kiribati</option>
+                    <option value="Micronésia">Micronésia</option>
+                    <option value="Nauru">Nauru</option>
+                    <option value="Nova Zelândia">Nova Zelândia</option>
+                    <option value="Palau">Palau</option>
+                    <option value="Papua Nova Guiné">Papua Nova Guiné</option>
+                    <option value="Samoa">Samoa</option>
+                    <option value="Tonga">Tonga</option>
+                    <option value="Tuvalu">Tuvalu</option>
+                    <option value="Vanuatu">Vanuatu</option>
                 </select>
+            </div>
+        </form>
+        <br>
+        <form action="#" novalidate>
+            <div class="Nascimento" id="data_nascimento">
+                <span class="material-symbols-outlined">cake</span>
+                <input type="date" autocomplete="off" id="calendario" name="date_nascimento" class="data_nascimento" size="12" mascara="DD/MM/YYYY" maxlength="12" field="date">
             </div>
         </form>
     </fieldset>
 </body>
 </html>
-
-<input type="date" autocomplete="off" id="calendario" name="date_nascimento" class="data_nascimento" size="12" mascara="DD/MM/YYYY" maxlength="12" field="date">
