--- a/Cadastro.html
+++ b/Cadastro.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Senha-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Mundo-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Aniversario-->
+    <link rel="stylesheet" href="Cadastro.css">
 </head>
 <body>
-    <fieldset class="borda" id="borda">
+    <fieldset class="borda">
         <h1 class="fa-toilet-paper">CADASTRAR-SE</h1>
-        <br>
+        <hr class="hr">
         <div class="fa-linkedin" id="fa-linkedin"><!--Cadastro Atraves das Redes Sociais-->
             <a href="https://www.linkedin.com/login">
                 <i class="fa-linkedin">
