--- a/Cadastro.html
+++ b/Cadastro.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Senha-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Mundo-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><!--Aniversario-->
-    <link rel="stylesheet" href="Cadastro.css">
+    <link rel="stylesheet" href="Cad.css">
 </head>
 <body>
     <fieldset class="borda">
@@ -41,7 +41,7 @@
                 <hr class="hr"data-content="OU">
             </div>
         </div>
-        <form action="conexao.php" accept="viewport" method="post" novalidate><!--Tag para armazenar os dados no banco de dados tornando validos-->
+        <form action="" accept="viewport" method="post" novalidate><!--Tag para armazenar os dados no banco de dados tornando validos-->
             <div class="nome" id="nome">
                 <span class="material-symbols-outlined">badge</span>
                 <mat-stepper [linear]="linear"><!--Tag mat, sera responsavel por -->
