--- a/Cadastro.html
+++ b/Cadastro.html
@@ -59,17 +59,13 @@
             </div>
             <br> 
             <div class="senha" id="senha">
-                <label class="control_label" for="psw_senha">
-                    <span class="material-symbols-outlined">lock</span>
-                </label>
-                <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[senha]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password">   
+                <span class="material-symbols-outlined">lock</span>
+                <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[senha]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password" style="width: 170px !important;">   
             </div>
             <br>
             <div class="psw_senha" id="psw_senha_confirmation">
-                <label class="control-label" for="psw_confirmation">
-                    <span class="material-symbols-outlined">lock</span>
-                </label>
-                <input label="false" required="required" class="senha_required" autocomplete="off" aria-required="true" type="password" name="psw[psw_senha_confirmation]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password">
+                <span class="material-symbols-outlined">lock</span>
+                <input label="false" required="required" class="psw_required" autocomplete="off" aria-required="true" type="password" name="psw[psw_senha_confirmation]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password" style="width: 170px !important;">
             </div>
         <br>
             <div class="linguagem" id="linguagem">
