--- a/Cadastro.html
+++ b/Cadastro.html
@@ -68,7 +68,7 @@
                 <input label="false" required="required" class="psw_required" autocomplete="off" aria-required="true" type="password" name="psw[psw_senha_confirmation]" pattern="[A-Za-z]{9}" placeholder="Digite Sua Senha" min="5" max="9" minlength="[A-Za-z]{5}" maxlength="A-Za-z]{9}" required maxlength="10" aria-activedescendant="senha" checked="password" style="width: 170px !important;">
             </div>
         <br>
-            <div class="linguagem" id="linguagem">
+            <div class="linguagem" id="linguagem" style="display: flex; width: 200px !important;">
                 <span class="material-symbols-outlined">language</span>
                 <select class="pais" required="required" priority="BR" name="pais" id="--Mundo--">
                     <option selected="pais" required="required">PAÍS</option>
