--- a/Cadastro.html
+++ b/Cadastro.html
@@ -41,7 +41,7 @@
                 <hr class="hr"data-content="OU">
             </div>
         </div>
-        <form action="" accept="viewport" method="post" novalidate><!--Tag para armazenar os dados no banco de dados tornando validos-->
+        <form action="Registro.php" accept="viewport" method="post" novalidate><!--Tag para armazenar os dados no banco de dados tornando validos-->
             <div class="nome" id="nome">
                 <span class="material-symbols-outlined">badge</span>
                 <mat-stepper [linear]="linear"><!--Tag mat, sera responsavel por -->
