--- a/Cadastro.html
+++ b/Cadastro.html
@@ -15,26 +15,28 @@
     <fieldset class="borda">
         <h1 class="fa-toilet-paper">CADASTRAR-SE</h1>
         <hr class="hr">
-        <div class="fa-linkedin" id="fa-linkedin"><!--Cadastro Atraves das Redes Sociais-->
-            <a href="https://www.linkedin.com/login">
-                <i class="fa-linkedin">
-                    <img src="linkedin.png">
-                </i>
-            </a> 
-        </div>
-        <div class="fa-facebook" id="fa-facebook">
-            <a href="https://www.facebook.com/?locale=pt_BR">
-                <i class="fa-facebook">
-                    <img src="facebook.png">
-                </i>
-            </a>
-        </div>
-        <div class="fa-gmail" id="fa-gmail">
-            <a href="https://accounts.google.com/login">
-                <i class="fa-gmail">
-                    <img src="gmail.png" >
-                </i>
-            </a>
+        <div class="midia" id="midia">
+            <div class="fa-linkedin" id="fa-linkedin"><!--Cadastro Atraves das Redes Sociais-->
+                <a href="https://www.linkedin.com/login">
+                    <i class="fa-linkedin">
+                        <img src="linkedin.png">
+                    </i>
+                </a> 
+            </div>
+            <div class="fa-facebook" id="fa-facebook">
+                <a href="https://www.facebook.com/?locale=pt_BR">
+                    <i class="fa-facebook">
+                        <img src="facebook.png">
+                    </i>
+                </a>
+            </div>
+            <div class="fa-gmail" id="fa-gmail">
+                <a href="https://accounts.google.com/login">
+                    <i class="fa-gmail">
+                        <img src="gmail.png" >
+                    </i>
+                </a>
+            </div>
         </div>
         <div class="row"><!--Insere uma linha separando os cards-->
             <div class="linha">
